<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

 <TextView
     android:layout_width="match_parent"
     android:layout_margin="5dp"
     android:layout_height="wrap_content"
     android:text="@string/text_s"
     android:textAlignment="center"
     android:textSize="18sp"
     android:textStyle="bold" />

 <TextView
     android:layout_margin="10dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/adress"/>

 <TextView
     android:layout_marginLeft="10dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:drawableRight="@android:drawable/ic_menu_directions"
     android:text="@string/itin_raire"
     android:textStyle="bold" />

 <WebView  xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/webview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     />

</RelativeLayout>