<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorback"
    tools:context=".UI.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_alignParentLeft="true">


        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="314dp"
            android:layout_height="111dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            app:srcCompat="@drawable/ic_logo" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="322dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="191dp"
                android:drawableLeft="@drawable/ic_email"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/inPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="322dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:drawableLeft="@drawable/ic_password"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="#fff"
                android:textColorHint="#fff" />
        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->


        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="#ffff" />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dip"
            android:background="#fff"
            android:text="@string/btn_login"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp" />


        <!-- Link to Login Screen -->


        <Button
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:text="@string/btn_register"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="15dp"
            tools:ignore="OnClick" />
    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</RelativeLayout>
