<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />



        <RelativeLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="Test"
                android:text="Trouver son itineraire"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="15dp"
                tools:ignore="OnClick"
                android:layout_centerInParent="true"/>

            <LinearLayout
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@android:color/white"
                    android:background="@color/colorPrimary"
                    android:text="@string/accident_text"
                    android:id="@+id/btn_accident"/>

                <Button
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@android:color/white"
                    android:background="@color/colorPrimary"
                    android:text="@string/traffic_jam_text"
                    android:id="@+id/btn_traffic_jam"/>

                <Button
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@android:color/white"
                    android:background="@color/colorPrimary"
                    android:text="@string/agression_text"
                    android:id="@+id/btn_agression"/>
            </LinearLayout>
        </RelativeLayout>

</android.support.v4.widget.DrawerLayout>
